Add size parameter to wrap Make wrap restricted Rename asUnboundedSlice -> asUnbounded and drop overloads